# Pico-Xcode-template

./: LICENSE.TXT  README.md  install_template.sh  license.txt
Raspberry Pi Pico.xctemplate/: CMakeLists.txt  TemplateInfo.plist  deploy_on_pico.sh  main.cc
